CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_EMPLMT__c.object
<CustomObject>
    <description>Employer information</description>
   <!-- <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_INFO_EMPLMT__c</fullName>
        <label>Temporary Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00337</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_INFO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Break Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_INFO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Break Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>Address Line 2</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00002</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <description>Zip Ext.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip Ext.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MAIN__c</fullName>
        <description>Zip</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_SE__c</fullName>
        <description>How Verified</description>
        <label>How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00758</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VRFYD_SE__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_WAGE_MIN__c</fullName>
        <label>Is the individual receiving minimum wage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Employment Begin Date</description>
        <label>Employment Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Employment End Date</description>
        <label>Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_HIRE_TEMP__c</fullName>
        <description>Temporary/Seasonal Estimated End Date</description>
        <label>Temporary/Seasonal Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_PAY_FIRST__c</fullName>
        <description>First Pay Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>First Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Data_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment Data Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>T_SBSD_INDIV19</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_STUBS_PAY_RCVS__c</fullName> 
        <description>Job started within the last 60 days?</description>
        <label>Job started within the last 60 days?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CBMS_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CBMS Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Least_Pay_Stub_Date__c</fullName>
        <label>Least Pay Stub Date</label>
        <summarizedField>T_EMPLMT_INCOME__c.Least_Pay_Stub_Date__c</summarizedField>
        <summaryForeignKey>T_EMPLMT_INCOME__c.IDN_EMPLMT_INDIV__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NAM_BUSNS__c</fullName>
        <description>Employer/Business Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Employer/Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_DBA__c</fullName>
        <description>DBA</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>DBA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_EXTN__c</fullName>
        <description>Employer/Business Phone Number Ext.</description>
        <label>Employer/Business Phone Number Ext.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <description>Employer/Business Phone Number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Employer/Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Expenses__c</fullName>
        <label>Total Number Of Expenses</label>
        <summaryForeignKey>T_SBSD_EMPLMT_EXP__c.IDN_EMPLMT_INDIV__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Yearly_Expense__c</fullName>
        <label>Total Yearly Expense</label>
        <summarizedField>T_SBSD_EMPLMT_EXP__c.Calculated_Yearly_Expense__c</summarizedField>
        <summaryForeignKey>T_SBSD_EMPLMT_EXP__c.IDN_EMPLMT_INDIV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Employment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Employment</fullName>
        <active>true</active>
        <label>Self-Employment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adr_Zip_Extn_Length_4</fullName>
        <active>true</active>
        <description>checking Addr ZIP EXTN is of length 4</description>
        <errorConditionFormula>AND( NOT(IDN_CLIENT__r.Is_Peak_Data__c) , NOT(IDN_CLIENT__r.Is_CBMS_Data__c) , NOT(ISBLANK(ADR_ZIP_EXTN__c)), LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4)</errorConditionFormula>
        <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
        <errorMessage>Zip Extension should be of 4 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adr_Zip_Main_Length_5</fullName>
        <active>true</active>
        <description>Addr Zip Main should be of length 5</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c), NOT(IDN_CLIENT__r.Is_CBMS_Data__c), NOT(ISBLANK(ADR_ZIP_MAIN__c)), LEN(ADR_ZIP_MAIN__c) &lt;&gt; 5)</errorConditionFormula>
        <errorDisplayField>ADR_ZIP_MAIN__c</errorDisplayField>
        <errorMessage>Zip Address should be of length 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Later_Than_Begin_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Employment End Date must be greater than Employment Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Pay_Date_Less_Than_All_Pay_Stub</fullName>
        <active>true</active>
        <description>CHAT-338: First Pay Date must be less or equal to all &quot;Pay Date&quot; on all related &quot;Employment Pay Stub&quot;.</description>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_PAY_FIRST__c  &gt;  Least_Pay_Stub_Date__c</errorConditionFormula>
        <errorDisplayField>DTE_PAY_FIRST__c</errorDisplayField>
        <errorMessage>First Pay Date must be less or equal to all &quot;Pay Date&quot; on all related &quot;Employment Pay Stub&quot;.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Req_CDE_SOURCE_VRFYD_SE</fullName>
        <active>false</active>
        <description>CDE_SOURCE_VRFYD_SE is required when T_SBSD_INDIV_EMPLMT, CDE_TYPE_VRFYD_SE is &quot;Written Verification&quot; and Self-Employment record type.</description>
        <errorConditionFormula>OR(AND(ISNEW(),NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), ISPICKVAL( CDE_SOURCE_VRFYD_SE__c , &apos;&apos;) , RecordType.DeveloperName = &apos;Self_Employment&apos;, ISPICKVAL(CDE_TYPE_VRFYD_SE__c, &apos;V&apos;)),AND(NOT(ISNEW()),NOT( ISCHANGED(CDE_WAGE_MIN__c)), NOT(IDN_CLIENT__r.Is_Peak_Data__c), ISPICKVAL( CDE_SOURCE_VRFYD_SE__c , &apos;&apos;) , RecordType.DeveloperName = &apos;Self_Employment&apos;, ISPICKVAL(CDE_TYPE_VRFYD_SE__c, &apos;V&apos;)))</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_SE__c</errorDisplayField>
        <errorMessage>How Verified is required if Verified is &apos;Written Verification&apos;</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Temp_Date_Later_Than_Begin_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_HIRE_TEMP__c</errorConditionFormula>
        <errorDisplayField>DTE_END_HIRE_TEMP__c</errorDisplayField>
        <errorMessage>Temporary/Seasonal Estimated End Date must be greater than Employment Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_Message_before_saving_the_record</fullName>
        <active>true</active>
        <description>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), NOT(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c),IDN_CLIENT__r.Age__c &lt; VALUE( $Label.Teen_Parent_Age_Limit ),NOT(IDN_CLIENT__r.Has_Allowed_Relationship__c),NOT(Ignore__c))</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
    </validationRules>
    <validationRules>
    	<fullName>BeginDateWithin31DaysFuture</fullName>
   	    <active>true</active>
    	<description>Begin Date cannot be more than 31 days in the future</description>
    	<errorConditionFormula>DTE_BEGIN_EFFV__c &gt;  TODAY() +31</errorConditionFormula>
    	<errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    	<errorMessage>Begin Date cannot be more than 31 days in the future</errorMessage>
     </validationRules>
</CustomObject>