CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_EMPLMT__c/validationRules/Adr_Zip_Extn_Length_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Adr_Zip_Extn_Length_4</fullName>
    <active>true</active>
    <description>checking Addr ZIP EXTN is of length 4</description>
    <errorConditionFormula>AND( NOT(IDN_CLIENT__r.Is_Peak_Data__c) , NOT(IDN_CLIENT__r.Is_CBMS_Data__c) , NOT(ISBLANK(ADR_ZIP_EXTN__c)), LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4)</errorConditionFormula>
    <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
    <errorMessage>Zip Extension should be of 4 digits</errorMessage>
</ValidationRule>