CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_EMPLMT__c/validationRules/Adr_Zip_Main_Length_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Adr_Zip_Main_Length_5</fullName>
    <active>true</active>
    <description>Addr Zip Main should be of length 5</description>
    <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c), NOT(IDN_CLIENT__r.Is_CBMS_Data__c), NOT(ISBLANK(ADR_ZIP_MAIN__c)), LEN(ADR_ZIP_MAIN__c) &lt;&gt; 5)</errorConditionFormula>
    <errorDisplayField>ADR_ZIP_MAIN__c</errorDisplayField>
    <errorMessage>Zip Address should be of length 5</errorMessage>
</ValidationRule>