CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_EMPLMT__c/validationRules/End_Date_Later_Than_Begin_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Later_Than_Begin_Date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Employment End Date must be greater than Employment Begin Date.</errorMessage>
</ValidationRule>