CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_EMPLMT__c/listViews/Emp_TempBreak.listView-meta.xml
<ListView>
    <fullName>Emp_TempBreak</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IDN_CASE__c</columns>
    <columns>IDN_CLIENT__c</columns>
    <columns>DTE_BEGIN_EFFV_INFO__c</columns>
    <columns>DTE_END_EFFV_INFO__c</columns>
    <columns>CDE_TYPE_INFO_EMPLMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_BEGIN_EFFV_INFO__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/1/2022</value>
    </filters>
    <label>Emp_TempBreak</label>
</ListView>